--- a/package.json
+++ b/package.json
@@ -4,13 +4,9 @@
   "description": "locateyourfriend",
   "start":"index.js",
   "dependencies": {
-    "express": "4.13.4","socket.io": "latest"
+    "express": "4.13.4","socket.io": "1.4.5","mongoose":"4.4.2","jquery":"2.2.0"
   },
-<<<<<<< HEAD
-   "engines": {
-=======
   "engines": {
->>>>>>> deba947ab3ef041002711ef47c3771bda4b6d2a2
     "node": "4.2.6"
   },
 }
