--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "locateyourfriend",
   "start":"index.js",
   "dependencies": {
-    "express": "4.13.4","socket.io": "1.4.5","mongoose":"4.4.2","jquery":"2.2.0"
+    "express": "4.13.4",
+    "socket.io": "1.4.5",
+    "mongoose":"4.4.2"
   }
 }
