--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "locateyourfriend",
+  "name": "mongodbchat",
   "version": "0.0.1",
-  "description": "locateyourfriend",
-  "start":"index.js",
+  "description": "chat application using mongodb",
   "dependencies": {
-    "express": "4.13.4",
-    "socket.io": "1.4.5",
-    "mongoose":"4.4.2"
+    "express": "4.13.4","socket.io": "latest"
   }
 }
